testsuite/tests/parser/should_fail/T19923a.hs
{-# LANGUAGE T19923 #-}
module ShouldFail where
