testsuite/tests/parser/should_fail/T19923a.stderr

T19923a.hs:1:14: error: Unsupported extension: T19923
